# 2021-sem1-rinko

./: .gitignore  README.md
github-maron/Chap3/: Q1.ipynb  (+5 more)
hiroto-kai/: Chapter3 Q1.ipynb  CompareArray.py  MatMultiply.py  Q4.ipynb
ito-hiroki/: .gitignore  pyproject.toml  question1.py
ito-hiroki/chap1/: q1.py  q10.py  q2.py  q3.py  q4.py  q5.py  q6.py  q7.py  q8.py  q9.py
ito-hiroki/chap2/: chapter2.ipynb
ito-hiroki/chap3/: generate_dataset.ipynb  model.py  q1.py  q2.py  q3.py
ito-hiroki/chap4/: densenet.py  inception.py  layer.py  model.py  network_in_network.py  resnet.py  train.py  visualize_pooling.ipynb
ito-hiroki/chap5/: dataset.py  model.py  predict_model.ipynb  preprocess.py  tmp.py  train.py
ito-hiroki/chap6/: DCGAN.ipynb  dcgan.py
marosiy/: autoencoders.py  c1_q2.py  c1_q4.py  c1_q5.py  c1_q6.py  c1_q7.py  c1_q9.py  c3_q1.py  c3_q2.py  c3_q4.py  c4_q1to5.py  c4_q6toq8.py  c4_q9toq13.py  gru結果.txt  rinko_my_gru.py  rinko_my_lstm.py
mikisanmktn/: chapter01.ipynb  chapter02.ipynb  chapter03.ipynb  chapter04.ipynb  chapter05.ipynb  chapter06_1.ipynb  chapter06_2.ipynb  chapter06_3.ipynb  chapter06_4.ipynb  chapter06_5.ipynb  chapter06_6.ipynb  chapter06_6_controllable.ipynb  chapter06_7.ipynb  chapter06_7.py  chapter06_8.ipynb  chapter07_1.ipynb  chapter07_2.ipynb  chapter07_3.ipynb  chapter07_4.ipynb  chapter07_5.ipynb
ozora-ogino/: fizzBuzz.py  q02.py  q08.py  q3.py
teru77/: .gitignore
w-tomoka/: 2-1.py  2-10.py  2-2.py  2-3.py  2-4.py  2-5.py  2-6.py  2-7.py  2-8.py  2-9.py  3-3.py  3-4.py  c3-1.py  chapter4.py  rinko0419.ipynb  test.txt
(+358 files in other folders)
