[tool.poetry]
name = "ito-hiroki"
version = "0.1.0"
description = ""
authors = ["Ito Hiroki <hiroki.i0307@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^20.8b1"
flake8 = "^3.9.1"
numpy = "^1.20.2"
notebook = "^6.3.0"
Pillow = "^8.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
